--- a/personal_webapp/backend/front/templates/Wisdomise.html
+++ b/personal_webapp/backend/front/templates/Wisdomise.html
@@ -100,7 +100,7 @@
       <hr>
       <form action="{% url 'wis' %}">
         {% csrf_token %}
-        Please Specify Database Start date : <br> <input type = 'number' step="0.1" name = 'start_date' required > <br>
+        Please Specify Database Start date : <br> <input type = 'text' step="0.1" name = 'start_date' required > <br>
         Please Specify Current Portifolio Vector: <br> <input type = 'number' step="0.1"  name = 'vector' required > <br>
         <hr>
         <input style="text-align: right" type = 'submit'>
